--- a/index.html
+++ b/index.html
@@ -62,11 +62,6 @@
     </div>
 
 
-
-
-
-
-
     <h2>The story</h2>
 
     <div>
@@ -134,13 +129,16 @@
 
 
     <h3>The links</h3>
-    <ol>
-        <li><a href="https://www.w3schools.com/" target="_blank" rel="noopener" title="w3schools">w3schools</a></li>
-        <li><a href="https://developer.mozilla.org/en-US/" target="_blank" rel="noopener" title="Mozilla">developer
-                mozilla</a></li>
-        <li><a href="https://www.codecademy.com/learn/learn-html" target="_blank" rel="noopener"
-                title="CodeAcademy">CodeAcademy</a></li>
-    </ol>
+    <p>
+        <a href="https://www.w3schools.com/" target="_blank" rel="noopener" title="w3schools">w3schools</a> <br>
+        <a href="https://developer.mozilla.org/en-US/" target="_blank" rel="noopener" title="Mozilla">developer
+            mozilla</a> <br>
+        <a href="https://www.codecademy.com/learn/learn-html" target="_blank" rel="noopener"
+            title="CodeAcademy">CodeAcademy</a> <br>
+
+    </p>
+
+
 
 
 
